userServiceTests enhanced and checked, bot logic enhanced, button bugs have been solved

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>kotlin-stdlib</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+        <dependency>
             <groupId>io.github.kotlin-telegram-bot.kotlin-telegram-bot</groupId>
             <artifactId>telegram</artifactId>
             <version>6.1.0</version>
